--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "flow-typed": "^2.4.0",
     "node-sass-chokidar": "^1.3.0",
     "normalize.css": "^8.0.0",
     "react": "^16.4.0",
