--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "axios-mock-adapter": "^1.15.0",
     "flow-typed": "^2.4.0",
     "node-sass-chokidar": "^1.3.0",
     "normalize.css": "^8.0.0",
