--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "axios-mock-adapter": "^1.15.0",
     "flow-typed": "^2.4.0",
+    "geolib": "^2.0.24",
     "node-sass-chokidar": "^1.3.0",
     "normalize.css": "^8.0.0",
     "react": "^16.4.0",
