--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "dependencies": {
     "axios": "^0.18.0",
     "axios-mock-adapter": "^1.15.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-prettier": "^2.6.2",
     "flow-typed": "^2.4.0",
     "geolib": "^2.0.24",
     "node-sass-chokidar": "^1.3.0",
     "normalize.css": "^8.0.0",
+    "prettier": "^1.13.7",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-redux": "^5.0.7",
